--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "dotenv": "^1.2.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.0.0",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
+    "profanity-filter": "^0.2.1",
     "sequelize": "^3.15.1",
     "socket.io": "^1.3.7",
     "twitter": "^1.2.5"
