--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg-hstore": "^2.3.2",
     "profanity-filter": "^0.2.1",
     "sequelize": "^3.15.1",
+    "sequelize-cli": "^2.2.1",
     "twitter": "^1.2.5"
   }
 }
